--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -2,3 +2,5 @@
 
 @import './components/header.scss';
 @import './components/main-slider.scss';
+@import './components/main-catalog.scss';
+@import './components/main-categories.scss';
