--- a/src/assets/sass/components/main-categories.scss
+++ b/src/assets/sass/components/main-categories.scss
@@ -1,72 +1,8 @@
 .main-categories {
-    max-width: 1408px;
+    max-width: 1452px;
     margin: 0 auto;
     margin-bottom: 120px;
-
-    &__tabs {
-        display: grid;
-        row-gap: 53px;
-
-        &__list,
-        &__list--secondary {
-            display: flex;
-            justify-content: center;
-        }
-
-        &__list--secondary {
-            margin-bottom: 32px;
-        }
-
-        &__item {
-            position: relative;
-            font-family: 'Tenor Sans';
-            font-weight: 400;
-            font-size: 18px;
-            line-height: 21px;
-            text-transform: uppercase;
-            color: #000000;
-            cursor: pointer;
-
-            &--active {
-                &::after {
-                    position: absolute;
-                    left: 50%;
-                    bottom: -11px;
-                    width: 100px;
-                    height: 4px;
-                    transform: translateX(-50%);
-                    background-color: #FFD9DF;
-                    border-radius: 4px;
-                    cursor: default;
-                    content: "";
-                }
-            }
-
-            &:not(:last-child) {
-                margin-right: 60px;
-            }
-
-            &--secondary {
-                font-family: 'Montserrat';
-                font-weight: 700;
-                font-size: 12px;
-                line-height: 15px;
-                text-transform: uppercase;
-                color: #878787;
-                cursor: pointer;
-                transition: filter 0.4s, color 0.4s;
-
-                &:not(:last-child) {
-                    margin-right: 58px;
-                }
-
-                &:hover {
-                    color: #000000;
-                    filter: drop-shadow(0px 0px 16px rgba(240, 133, 151, 0.8));
-                }
-            }
-        }
-    }
+    padding: 0 22px;
 
     &__content {
         &__list {
@@ -258,6 +194,77 @@
             height: 8px;
             background: #F08597;
             border-radius: 2px;
+        }
+    }
+}
+
+.main {
+    &__tabs {
+        display: grid;
+        row-gap: 53px;
+
+        &--brands {
+            margin-bottom: 55px;
+        }
+
+        &__list,
+        &__list--secondary {
+            display: flex;
+            justify-content: center;
+        }
+
+        &__list--secondary {
+            margin-bottom: 32px;
+        }
+
+        &__item {
+            position: relative;
+            font-family: 'Tenor Sans';
+            font-weight: 400;
+            font-size: 18px;
+            line-height: 21px;
+            text-transform: uppercase;
+            color: #000000;
+            cursor: pointer;
+
+            &--active {
+                &::after {
+                    position: absolute;
+                    left: 50%;
+                    bottom: -11px;
+                    width: 100px;
+                    height: 4px;
+                    transform: translateX(-50%);
+                    background-color: #FFD9DF;
+                    border-radius: 4px;
+                    cursor: default;
+                    content: "";
+                }
+            }
+
+            &:not(:last-child) {
+                margin-right: 60px;
+            }
+
+            &--secondary {
+                font-family: 'Montserrat';
+                font-weight: 700;
+                font-size: 12px;
+                line-height: 15px;
+                text-transform: uppercase;
+                color: #878787;
+                cursor: pointer;
+                transition: filter 0.4s, color 0.4s;
+
+                &:not(:last-child) {
+                    margin-right: 58px;
+                }
+
+                &:hover {
+                    color: #000000;
+                    filter: drop-shadow(0px 0px 16px rgba(240, 133, 151, 0.8));
+                }
+            }
         }
     }
 }
