--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -4,3 +4,4 @@
 @import './components/main-slider.scss';
 @import './components/main-catalog.scss';
 @import './components/main-categories.scss';
+@import './components/brands.scss';
