--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -5,3 +5,9 @@
 @import './components/main-catalog.scss';
 @import './components/main-categories.scss';
 @import './components/brands.scss';
+@import './components/reviews.scss';
+@import './components/stock.scss';
+@import './components/faq.scss';
+@import './components/banner.scss';
+@import './components/news.scss';
+@import './components/textblock.scss';
