--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -11,3 +11,4 @@
 @import './components/banner.scss';
 @import './components/news.scss';
 @import './components/textblock.scss';
+@import './components/footer.scss';
