--- a/src/assets/sass/global/global.scss
+++ b/src/assets/sass/global/global.scss
@@ -60,7 +60,7 @@ body {
     display: flex;
     flex-direction: column;
     max-width: 1900px;
-    height: 100%;
+    min-height: 100%;
     margin: 0 auto;
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
@@ -87,4 +87,25 @@ main {
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
+}
+
+.decorative__img {
+    position: absolute;
+    right: 0;
+    z-index: -2;
+    width: 209px;
+    height: 623px;
+    background: url('../assets/img/main-decorative.webp') no-repeat;
+
+    &--first {
+        top: 394px;
+    }
+
+    &--second {
+        top: 3172px;
+    }
+
+    &--third {
+        top: 6357px;
+    }
 }
