Делает косметические фиксы

--- a/src/assets/sass/components/header.scss
+++ b/src/assets/sass/components/header.scss
@@ -2,7 +2,7 @@
     width: 100%;
     max-width: 1451px;
     margin: 0 auto;
-    padding: 22px;
+    padding: 20px 22px;
     font-family: "Montserrat", sans-serif;
     font-size: 12px;
     line-height: 15px;
