--- a/src/assets/sass/global/global.scss
+++ b/src/assets/sass/global/global.scss
@@ -108,4 +108,12 @@ main {
     &--third {
         top: 6357px;
     }
+
+    &--fourth {
+        top: 7230px;
+        right: 0px;
+        width: 366px;
+        height: 502px;
+        background-image: url('../assets/img/footer-rose.svg');
+    }
 }
