Добавляет верстку каталога + правки на главной

--- a/src/assets/sass/components/banner.scss
+++ b/src/assets/sass/components/banner.scss
@@ -103,6 +103,11 @@
             font-size: 8px;
             line-height: 10px;
             user-select: none;
+
+            a {
+                color: #000000;
+                text-decoration: none;
+            }
         }
 
         &:checked {
