--- a/src/assets/sass/components/main-categories.scss
+++ b/src/assets/sass/components/main-categories.scss
@@ -41,8 +41,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 52px;
-            height: 24px;
+            padding: 2px 12px;
             background-color: #F08597;
             border-radius: 100px;
             font-family: 'Montserrat';
