--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -1,5 +1,8 @@
 @import './global/global.scss';
+@import './global/decorative.scss';
+@import './global/breadcrumbs.scss';
 
+//Главная
 @import './components/header.scss';
 @import './components/main-slider.scss';
 @import './components/main-catalog.scss';
