--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -15,3 +15,6 @@
 @import './components/news.scss';
 @import './components/textblock.scss';
 @import './components/footer.scss';
+
+//Категория
+@import './components/category/category.scss';
