--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -18,3 +18,5 @@
 
 //Категория
 @import './components/category/category.scss';
+@import './components/category/filters.scss';
+@import './components/category/news.scss';
