--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -20,3 +20,5 @@
 @import './components/category/category.scss';
 @import './components/category/filters.scss';
 @import './components/category/news.scss';
+@import './components/category/sorting.scss';
+@import './components/category/results.scss';
