--- a/src/assets/sass/components/category/filters.scss
+++ b/src/assets/sass/components/category/filters.scss
@@ -42,7 +42,7 @@
         gap: 14px;
         cursor: pointer;
 
-        .hidden-checkbox[type="checkbox"]:checked + .filter__checkbox::after {
+        .hidden-checkbox[type="checkbox"]:checked+.filter__checkbox::after {
             position: absolute;
             top: 50%;
             left: 50%;
@@ -83,6 +83,7 @@
         }
 
         .filter__open-close {
+
             &::after,
             &::before {
                 position: absolute;
@@ -126,12 +127,39 @@
                 font-size: 14px;
                 line-height: 140%;
                 text-align: center;
+                transition: border 0.4s, color 0.4s;
+
+
+                &::-webkit-input-placeholder {
+                    color: #888;
+                    transition: color 0.4s;
+                }
+
+                &::-moz-placeholder {
+                    color: #888;
+                    transition: color 0.4s;
+                }
+
+                &:hover,
+                &:focus-visible {
+                    outline: 0;
+                    border: 1px solid #888;
+                    color: #000;
+                    &::-webkit-input-placeholder {
+                        color: #000;
+                    }
+
+                    &::-moz-placeholder {
+                        color: #000;
+                    }
+                }
 
                 &::-webkit-outer-spin-button,
                 &::-webkit-inner-spin-button {
                     -webkit-appearance: none;
                     margin: 0;
                 }
+
             }
         }
     }
