--- a/src/assets/sass/components/category/category.scss
+++ b/src/assets/sass/components/category/category.scss
@@ -57,5 +57,17 @@
         gap: 17px;
         margin: 24px 0;
     }
+
+    &__results {
+        margin-bottom: 120px;
+    }
+
+    &__popular {
+        margin-bottom: 120px;
+    }
+
+    &__reviews {
+        margin-bottom: 120px;
+    }
 }
 
