--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -1,6 +1,7 @@
 @import './global/global.scss';
 @import './global/decorative.scss';
 @import './global/breadcrumbs.scss';
+@import './global/slider.scss';
 
 //Главная
 @import './components/header.scss';
