--- a/src/assets/sass/components/category/sorting.scss
+++ b/src/assets/sass/components/category/sorting.scss
@@ -139,6 +139,7 @@
         font-size: 12px;
         line-height: 15px;
         color: #888888;
+        cursor: pointer;
 
         &--active {
             padding: 4px 4px 5px 3px;
