--- a/src/assets/sass/global/global.scss
+++ b/src/assets/sass/global/global.scss
@@ -61,12 +61,18 @@ body {
     position: relative;
     display: flex;
     flex-direction: column;
-    max-width: 1900px;
     min-height: 100%;
-    margin: 0 auto;
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-size: 14px;
+}
+
+.body__wrapper {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    max-width: 1900px;
+    margin: 0 auto;
 }
 
 header,
