--- a/src/assets/sass/global/decorative.scss
+++ b/src/assets/sass/global/decorative.scss
@@ -30,6 +30,10 @@
             height: 502px;
             background-image: url('../assets/img/footer-rose.svg');
         }
+
+        &--product {
+            top: 2879px;
+        }
     }
 
     &__left {
