--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -23,3 +23,6 @@
 @import './components/category/news.scss';
 @import './components/category/sorting.scss';
 @import './components/category/results.scss';
+
+//Продукт
+@import './components/product/product.scss';
