--- a/src/assets/sass/global/global.scss
+++ b/src/assets/sass/global/global.scss
@@ -71,6 +71,7 @@ body {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    min-width: 1408px;
     max-width: 1900px;
     margin: 0 auto;
 }
