--- a/src/assets/sass/global/decorative.scss
+++ b/src/assets/sass/global/decorative.scss
@@ -34,6 +34,10 @@
         &--product {
             top: 2879px;
         }
+
+        &--favorites {
+            top: 111px;
+        }
     }
 
     &__left {
@@ -52,6 +56,10 @@
 
         &--basket {
             bottom: 73px;
+        }
+
+        &--favorites {
+            top: 734px;
         }
     }
 
