--- a/src/assets/sass/components/main-catalog.scss
+++ b/src/assets/sass/components/main-catalog.scss
@@ -4,6 +4,10 @@
     margin-bottom: 120px;
     padding: 0 22px;
 
+    &__title {
+        margin-bottom: 40px;
+    }
+
     &__list {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
