Добавляет верстку страницы оформления заказа

--- a/src/assets/sass/global/decorative.scss
+++ b/src/assets/sass/global/decorative.scss
@@ -38,6 +38,10 @@
         &--favorites {
             top: 111px;
         }
+
+        &--making-order {
+            top: 223px;
+        }
     }
 
     &__left {
@@ -60,6 +64,10 @@
 
         &--favorites {
             top: 734px;
+        }
+
+        &--making-order {
+            top: 1012px;
         }
     }
 
