--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -30,5 +30,9 @@
 //Корзина
 @import './components/basket/basket.scss';
 
+//Оформление заказа
+@import './components/making-order/making-order.scss';
+
 //Поиск
 @import './components/search/search.scss';
+
