--- a/src/assets/sass/components/basket/basket.scss
+++ b/src/assets/sass/components/basket/basket.scss
@@ -10,6 +10,27 @@
         display: flex;
         flex-direction: column;
         border-top: 1px solid #E9E9E9;
+
+        &--order {
+            .basket__name {
+                max-width: 248px;
+                margin-right: 75px;
+            }
+
+            .products__count--digit {
+                font-weight: 300;
+                font-size: 14px;
+                line-height: 140%;
+            }
+
+            .basket__price-wrapper {
+                margin-left: 100px;
+            }
+
+            .basket__price {
+                margin-bottom: 0;
+            }
+        }
     }
 
     &__item {
@@ -20,8 +41,12 @@
     }
 
     &__img {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 88px;
+        height: 88px;
         margin-right: 24px;
-        padding: 8.5px 28.5px;
         background: #FFFFFF;
         border: 1px solid #E9E9E9;
         border-radius: 2px;
@@ -69,8 +94,8 @@
             margin-right: 24px;
             padding: 19px;
             background: #FFFFFF;
-            border: none;
-            outline: 1px solid #E9E9E9;
+            outline: 2px solid transparent;
+            border: 1px solid #E9E9E9;
             border-radius: 4px;
             font-family: 'Montserrat';
             font-weight: 400;
@@ -80,7 +105,7 @@
             text-align: center;
             text-transform: uppercase;
             letter-spacing: 7px;
-            transition: outline-color 0.3s ease-in-out;
+            transition: outline-color 0.4s;
 
             &:hover,
             &:focus-visible {
@@ -172,6 +197,7 @@
         line-height: 16px;
         text-transform: uppercase;
         color: #FFFFFF;
+        text-decoration: none;
         transition: background-color .4s, box-shadow .4s;
         cursor: pointer;
 
