Добавляет верстку страницы спасибо за заказ

--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -33,6 +33,10 @@
 //Оформление заказа
 @import './components/making-order/making-order.scss';
 
+//Спасибо за заказ
+@import './components/thanks-for-order/thanks-for-order.scss';
+@import './components/thanks-for-order/order-info.scss';
+
 //Поиск
 @import './components/search/search.scss';
 
