--- a/src/assets/sass/components/basket/basket.scss
+++ b/src/assets/sass/components/basket/basket.scss
@@ -31,6 +31,12 @@
                 margin-bottom: 0;
             }
         }
+
+        &--thanks {
+            .basket__item:last-child {
+                border-bottom: none;
+            }
+        }
     }
 
     &__item {
