Добавляет верстку страниц доставка и оплата

--- a/src/assets/sass/components/thanks-for-order/thanks-for-order.scss
+++ b/src/assets/sass/components/thanks-for-order/thanks-for-order.scss
@@ -18,6 +18,7 @@
         }
 
         &:nth-child(2) {
+            margin-left: -72px;
             background: url('../assets/img/thanks-for-order/computer.svg') no-repeat top center;
         }
 
