--- a/src/assets/sass/global/decorative.scss
+++ b/src/assets/sass/global/decorative.scss
@@ -69,6 +69,10 @@
         &--making-order {
             top: 1012px;
         }
+
+        &--delivery {
+            top: 444px;
+        }
     }
 
 }
