--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -40,3 +40,5 @@
 //Поиск
 @import './components/search/search.scss';
 
+//Доставка и оплата
+@import './components/delivery-payment/delivery-payment.scss';
