Добавляет верстку страниц о компании и контакты

--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -42,3 +42,9 @@
 
 //Доставка и оплата
 @import './components/delivery-payment/delivery-payment.scss';
+
+//О компании
+@import './components/about-us/about-us.scss';
+
+//Контакты
+@import './components/contacts/contacts.scss';
