--- a/src/assets/sass/components/banner.scss
+++ b/src/assets/sass/components/banner.scss
@@ -48,6 +48,7 @@
         font-weight: 300;
         line-height: 20px;
         color: #888888;
+        text-align: center;
 
         &:hover,
         &:focus {
@@ -112,12 +113,13 @@
         }
 
         &:checked {
-            + .main-banner__checkbox__mark:after {
+            +.main-banner__checkbox__mark:after {
                 position: absolute;
-                top: 5px;
-                left: 5px;
+                top: 50%;
+                left: 50%;
                 width: 6px;
                 height: 6px;
+                transform: translateX(-50%) translateY(-50%);
                 background-color: #F08597;
                 border-radius: 1px;
                 content: "";
@@ -156,6 +158,41 @@
 
         .main-banner__img {
             right: 22.5px;
+        }
+    }
+
+    &__form {
+        &--contacts {
+            max-width: none;
+
+            .main-banner__tel-input {
+                width: 100%;
+                height: 60px;
+            }
+
+            .basket__buy {
+                margin: 0;
+                margin-bottom: 16px;
+            }
+
+            .main-banner__checkbox__mark {
+                min-width: 20px;
+                min-height: 20px;
+                margin-right: 16px;
+                border: 1px solid #888888;
+            }
+
+            .main-banner__checkbox:checked+.main-banner__checkbox__mark:after {
+                width: 8px;
+                height: 8px;
+            }
+
+            .main-banner__checkbox__text {
+                max-width: none;
+                font-weight: 400;
+                font-size: 10px;
+                line-height: 12px;
+            }
         }
     }
 
