--- a/src/assets/sass/global/slider.scss
+++ b/src/assets/sass/global/slider.scss
@@ -11,6 +11,14 @@
         &--reviews {
             margin-top: 20px;
         }
+
+        &--company {
+            position: absolute;
+            top: 50%;
+            left: -112px;
+            width: 912px;
+            transform: translateY(-50%);
+        }
     }
 
     &__btn {
