Делает правки верстки

--- a/src/assets/sass/components/basket/basket.scss
+++ b/src/assets/sass/components/basket/basket.scss
@@ -1,4 +1,6 @@
 .basket {
+    max-width: 1408px;
+    margin: 0 auto;
     margin-bottom: 120px;
 
     &__wrapper {
@@ -73,6 +75,7 @@
         margin-left: 40px;
         display: flex;
         flex-direction: column;
+        align-items: flex-start;
     }
 
     &__price {
