--- a/src/assets/sass/components/header.scss
+++ b/src/assets/sass/components/header.scss
@@ -8,6 +8,10 @@
     line-height: 15px;
     color: #535353;
 
+    &--main {
+        margin-bottom: 656px;
+    }
+
     &__wrapper {
         display: flex;
         flex-direction: column;
