--- a/src/assets/sass/global/decorative.scss
+++ b/src/assets/sass/global/decorative.scss
@@ -73,6 +73,10 @@
         &--delivery {
             top: 444px;
         }
+
+        &--contacts {
+            top: 702px;
+        }
     }
 
 }
