--- a/src/assets/sass/components/footer.scss
+++ b/src/assets/sass/components/footer.scss
@@ -80,6 +80,11 @@
         outline: 1px solid #000000;
         border: none;
         border-radius: 4px;
+        font-family: 'Tenor Sans';
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 16px;
+        text-transform: uppercase;
         cursor: pointer;
         transition: all 0.6s, color 0.3s;
 
