--- a/src/assets/sass/components/product/product.scss
+++ b/src/assets/sass/components/product/product.scss
@@ -2,6 +2,7 @@
     display: flex;
     align-items: flex-start;
     max-width: 1408px;
+    margin: 0 auto;
     margin-bottom: 40px;
 
     &__photos {
