--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -54,3 +54,12 @@
 
 //Блог
 @import './components/blog/blog.scss';
+
+//Вебинар
+@import './components/webinar/webinar-main.scss';
+@import './components/webinar/webinar-info.scss';
+@import './components/webinar/webinar-action.scss';
+@import './components/webinar/webinar-about.scss';
+@import './components/webinar/webinar-autor.scss';
+@import './components/webinar/webinar-useful.scss';
+@import './components/webinar/webinar-get.scss';
