--- a/src/assets/sass/components/news.scss
+++ b/src/assets/sass/components/news.scss
@@ -46,6 +46,10 @@
         }
     }
 
+    &__img {
+        border-radius: 4px 4px 0px 0px;
+    }
+
     &__date {
         margin-bottom: 16px;
         font-size: 12px;
