--- a/src/assets/sass/global/decorative.scss
+++ b/src/assets/sass/global/decorative.scss
@@ -42,6 +42,16 @@
         &--making-order {
             top: 223px;
         }
+
+        &--webinar {
+            &-middle {
+                top: 2540px;
+            }
+
+            &-bottom {
+                bottom: 1453px;
+            }
+        }
     }
 
     &__left {
@@ -76,6 +86,16 @@
 
         &--contacts {
             top: 702px;
+        }
+
+        &--webinar {
+            &-middle {
+                top: 3613px;
+            }
+
+            &-bottom {
+                bottom: 380px;
+            }
         }
     }
 
