Добавляет страницу с отдельной статьей

--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -63,3 +63,6 @@
 @import './components/webinar/webinar-autor.scss';
 @import './components/webinar/webinar-useful.scss';
 @import './components/webinar/webinar-get.scss';
+
+//Статья
+@import './components/article/article.scss';
