--- a/src/assets/sass/components/main-categories.scss
+++ b/src/assets/sass/components/main-categories.scss
@@ -221,10 +221,18 @@
             }
         }
 
+        &--reviews {
+            margin-bottom: 52px;
+        }
+
         &__list,
         &__list--secondary {
             display: flex;
             justify-content: center;
+
+            &--reviews {
+                justify-content: flex-start;
+            }
         }
 
         &__list--secondary {
@@ -277,6 +285,16 @@
                 &:hover {
                     color: #000000;
                     filter: drop-shadow(0px 0px 16px rgba(240, 133, 151, 0.8));
+                }
+            }
+        }
+
+        &__content {
+            &-item {
+                display: none;
+
+                &--active {
+                    display: block;
                 }
             }
         }
