Добавляет верстку страницы faq

--- a/src/assets/sass/components/category/results.scss
+++ b/src/assets/sass/components/category/results.scss
@@ -37,6 +37,10 @@
                 cursor: default;
             }
         }
+
+        &--faq {
+            margin-top: 0;
+        }
     }
 }
 
