--- a/src/assets/sass/components/reviews/reviews.scss
+++ b/src/assets/sass/components/reviews/reviews.scss
@@ -7,6 +7,16 @@
         text-align: left;
     }
 
+    &__btn {
+        position: absolute;
+        top: -3.5px;
+        right: 0;
+        width: 208px;
+        padding: 12px;
+        color: #000;
+        text-decoration: none;
+    }
+
     &-clients {
         &__list {
             display: grid;
