--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -72,3 +72,9 @@
 
 //FAQ
 @import './components/faq/faq.scss';
+
+//Карта сайта
+@import './components/site-map/site-map.scss';
+
+//Страница 404
+@import './components/page404/page404.scss';
