Добавляет верстку авторизации пользователя

--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -78,3 +78,6 @@
 
 //Страница 404
 @import './components/page404/page404.scss';
+
+//Личный кабинет
+@import './components/personal-area/log-in.scss';
