--- a/src/assets/sass/components/banner.scss
+++ b/src/assets/sass/components/banner.scss
@@ -87,8 +87,8 @@
         &__mark {
             position: relative;
             display: flex;
-            width: 16px;
-            height: 16px;
+            min-width: 16px;
+            min-height: 16px;
             margin-right: 12px;
             background: #FFFFFF;
             border-radius: 2px;
