Добавляет верстку страницы регистрации и личного кабинета

--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -81,3 +81,7 @@
 
 //Личный кабинет
 @import './components/personal-area/log-in.scss';
+@import './components/personal-area/personal-area.scss';
+@import './components/personal-area/pa.scss';
+@import './components/personal-area/data.scss';
+@import './components/personal-area/delivery.scss';
