--- a/src/assets/sass/components/footer.scss
+++ b/src/assets/sass/components/footer.scss
@@ -84,7 +84,9 @@
         font-weight: 400;
         font-size: 14px;
         line-height: 16px;
+        color: #000000;
         text-transform: uppercase;
+        text-decoration: none;
         cursor: pointer;
         transition: all 0.6s, color 0.3s;
 
