--- a/src/assets/sass/components/personal-area/log-in.scss
+++ b/src/assets/sass/components/personal-area/log-in.scss
@@ -36,6 +36,7 @@
     }
 
     &__form-descr {
+        max-width: 215px;
         font-weight: 600;
         font-size: 14px;
         line-height: 17px;
