--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -2,6 +2,9 @@
 @import './global/decorative.scss';
 @import './global/breadcrumbs.scss';
 @import './global/slider.scss';
+@import './global/search.scss';
+@import './global/city.scss';
+@import './global/modal.scss';
 
 //Главная
 @import './components/header.scss';
