--- a/src/assets/sass/components/banner.scss
+++ b/src/assets/sass/components/banner.scss
@@ -97,7 +97,6 @@
         &-wrapper {
             display: flex;
             align-items: center;
-            cursor: pointer;
         }
 
         &__text {
@@ -109,6 +108,10 @@
             a {
                 color: #000000;
                 text-decoration: none;
+
+                &:hover {
+                    font-weight: 500;
+                }
             }
         }
 
